# pywinmutex

./: README.md  main.py  pyproject.toml
examples/: acquire.py  simple.py
winmutex/: __init__.py  __meta__.py
