[project]
name = "pywinmutex"
version = "0.1.0"
description = "Simple handling mutexes with pywin32"
authors = [
    {name = "SantaSpeen",email = "santaspeen@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
