[project]
name = "winmutex"
version = "1.0.0"
description = "Simple handling mutexes with pywin32"
authors = [
    {name = "SantaSpeen",email = "santaspeen@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pywin32 (>=310,<311)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
